finished client login code